--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^10.5.0",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
