--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "apexcharts": "^3.37.1",
     "framer-motion": "^10.5.0",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0"
   },
