--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
+    "miragejs": "^0.1.47",
     "prettier": "^2.8.4",
     "typescript": "4.9.5"
   }
