--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.28.0",
     "apexcharts": "^3.37.1",
+    "axios": "^1.3.5",
     "framer-motion": "^10.5.0",
     "next": "13.2.4",
     "react": "18.2.0",
